applications/common/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/enable-cors: "true"
  name: jenkins
  namespace: devops-tools
spec:
  ingressClassName: nginx
  rules:
  - host: jenkins.entto.shop
    http:
      paths:
      - backend:
          service:
            name: jenkins-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jenkins.entto.shop
    secretName: jenkins.entto.shop-tls
